<resources>
    <string name="app_name">WEATHER</string>
    <string name="close_app">Close App?</string>
    <string name="cancel">CANCEL</string>
    <string name="close">CLOSE</string>
    <string name="select">SELECT</string>
    <string name="enter_city">enter city</string>
    <string name="loading">" "LOADING...</string>
    <string name="noNetOrGPSConn">No network connection or GPS is off.</string>
    <string name="noNetConn">No network connection.</string>
</resources>
