<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/close_app_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:textAlignment="center"
        android:text="@string/close_app"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_close_button"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:layout_weight="1">
        </com.google.android.material.button.MaterialButton>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/close_app_button"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/close"
            android:textSize="16sp"
            android:layout_weight="1">
        </com.google.android.material.button.MaterialButton>
    </LinearLayout>

</LinearLayout>