<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="280dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_city_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="@string/enter_city" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:layout_weight="1">
        </com.google.android.material.button.MaterialButton>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/select_button"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/select"
            android:layout_weight="1">
        </com.google.android.material.button.MaterialButton>
    </LinearLayout>

</LinearLayout>